Add msgpack support for data transfer

--- a/core/trino-main/pom.xml
+++ b/core/trino-main/pom.xml
@@ -337,6 +337,11 @@
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>jackson-dataformat-msgpack</artifactId>
+            <version>0.9.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openjdk.jol</groupId>
